--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.14.5",
+        "@types/react": "^17.0.11",
+        "@types/react-dom": "^17.0.8",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "ts-loader": "^9.2.3",
+        "typescript": "^4.3.4"
     }
 }
