--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.4"
+    },
+    "dependencies": {
+        "bootstrap": "^5.0.1"
     }
 }
